--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <h2>Team Member 1</h2>
 
           <h4>Name</h4>
-          <p>Replace this text with your name.</p>
+          <p>Replace this .</p>
 
           <h4>Interests</h4>
           <p>Replace this text with 3 interests. (ex: Cricket, Flying kites, and hard alcohol)</p>
@@ -159,15 +159,15 @@
           <h2>Team Member 2</h2>
 
           <h4>Name</h4>
-          <p>Replace this text with your name.</p>
+          <p>Tracy.</p>
 
           <h4>Interests</h4>
-          <p>Replace this text with 3 interests. (ex: Pottery, High-fives, and making sausages)</p>
+          <p>this are totally my interests: Pottery, High-fives, and making sausages)</p>
           <h4>Favourite Food</h4>
 
-          <p>Replace this text with your favourite food (ex: Canned beans)</p>
+          <p>Risotto!</p>
           <h4>Profile Picture</h4>
-          <img src="img/instruct.jpg">
+          <img src="img/ohyeah.jpg">
         </div>
       </div>
       <p>Perfect! Now you're probably wondering how to get your teammate's changes on your computer. Let the sharing begin!</p>
