--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Coop git challenge!</title>
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 
   <style type="text/css">
     body {
@@ -56,10 +57,6 @@
 
     #task2 img {
       width: 50%;
-    }
-
-    #blinking-text {
-      color: red;
     }
 
     .btn {
