--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset='utf-8'>
   <title>Coop git challenge!</title>
 
+
+  <script type="text/javascript" src="js/main.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
   <style type="text/css">
@@ -292,18 +294,6 @@
   </div>
 
   <!-- Yay! You've found me. -->
-  <script type="text/javascript">
-    window.onload = function() {
-      var node = document.getElementById('blinking-text');
-      setInterval(function() {
-        visibility = node.style.visibility;
-        if (visibility == "") {
-          node.style.visibility = "hidden";
-        } else {
-          node.style.visibility = "";
-        }
-      }, 800);
-    }
-  </script>
+
 </body>
 </html>
