--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <section>
       <h1>Exercise 4</h1>
       <p>Here's one of my favourite quotes:</p>
-      <blockquote>&ldquo;Life is a box of chocolates!!!&rdquo; &mdash; Forrest Gump</blockquote>
+      <blockquote>&ldquo;YEEEEEEEAAAAAHHHHH BOYYYYYYYYYYYYYYYYYYYYYY!!!&rdquo; &mdash; Flava Flav</blockquote>
 
       <p>Until now you've been changing separate areas of the code. But what happens when you both edit the same thing at the same time!?</p>
       <p>To find out, let's have a race. Countdown from 3, and then complete the following:</p>
@@ -260,7 +260,7 @@
         <div class="span6">
           <h2>Team Member 2</h2>
           <ol>
-            <li>Change the quote above to something you think is even more awesome. It must be different from your teammate's.</li>
+            <li>Life is a box of chocolates.</li>
             <li>Commit &amp; push your changes to github.</li>
           </ol>
         </div>
