--- a/index.html
+++ b/index.html
@@ -143,11 +143,9 @@
           <h2>Team Member 1</h2>
 
           <h4>Name</h4>
-<<<<<<< HEAD
-          <p>Replace this .</p>
-=======
+          <p>hej</p>
+
           <p>Danijela Froki</p>
->>>>>>> 4a9b3e52be90b8c635d42161c029be0c52a85ef9
 
           <h4>Interests</h4>
           <p>Photography, gym, cats.</p>
@@ -245,7 +243,7 @@
     <section>
       <h1>Exercise 4</h1>
       <p>Here's one of my favourite quotes:</p>
-      <blockquote>&ldquo;YEzzzdfksldnflsdfnkj!&rdquo; &mdash; Flava Flav</blockquote>
+      <blockquote>&ldquo;YEzzzdfksldnflsdfnk!&rdquo; &mdash; Flava Flav</blockquote>
 
       <p>Until now you've been changing separate areas of the code. But what happens when you both edit the same thing at the same time!?</p>
       <p>To find out, let's have a race. Countdown from 3, and then complete the following:</p>
